--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
    crossorigin=""></script>
    
-  <script src="Indiageo.json"></script>
+  <script src="Municipal_Boundary.json"></script>
    <style>
     #mapid {
 	   width:820;
@@ -31,7 +31,7 @@
 	};
     }
     
-    var basicMap = L.map('mapid').setView([23.579732, 80.442383],5);
+    var basicMap = L.map('mapid').setView([43.60500,-79.64740],10);
     var jsonLayer = L.geoJSON(states,{style:mapstyle}).addTo(basicMap);
 	 
   </script>
